2001-08-05  John Kirkland  <jpk@bl.org>  (1.2-cvs-b5)
	* Don't display [reset counter] in albums.php if the display
	  counts feature is turned off for that particular album.

2001-08-05  John Kirkland  <jpk@bl.org>  (1.2-cvs-b4)
	* Nested albums now inherit the album settings from their parents
	  when they are created.  

	* Modified the "return-to" behavior when nested albums are used.
	  Now, if return is turned off, then nested albums will only show
	  a return link to their parent album, but not the main gallery.

2001-08-04  Bharat Mediratta  <bharat@menalto.com>  (1.2-cvs-b3)

	* Added a hack that allows you to do multi-level album highlighting.
	  It's still a bit limited; if you change the highlight at the
	  innermost level you still need to update it every step of the way
	  back up the chain.

2001-08-03  Bharat Mediratta  <bharat@menalto.com>

	* Fixed a bug that was causing you to be unable to modify the 
	  photo capture date.

	* Fixed a bug where if you change your own username it drops you
	  out of your session!

	* Fix for bug #447424: rotate not working under Nuke5.

	* Fixed bug #445598: duplicate images generated when uploading via
	  URL or from the local filesystem.  It turns out that we've had a
	  bug in the URL submit code since it was first written where we
	  double submit the form!  Thanks to cybertech@users.sourceforge.net
	  for letting me debug the problem onsite.

	* Added the mirror-site feature!  It still needs to be optimized,
	  but in its current state, you can rsync your albums to a remote
	  site (that you specify in the config wizard) and Gallery will
	  use photos from that location if they are up to date.

2001-08-02  Bharat Mediratta  <bharat@menalto.com>

	* Improved the URL fetch code so that now 
	   -  you don't need to specify http:// 
	   -  if it fails the first time, it'll try again with a trailing / 
	  The combination of these two tweaks allows you to enter 
	  "www.cnn.com" in the URL box. 
