@@ -1,3 +1,7 @@
+2001-08-05  John Kirkland  <jpk@bl.org>  (1.2-cvs-b6)
+	* Changed a few more $name variables to $src_name and one to
+	  $dst_name in classes/AlbumItem.php.
+
 2001-08-05  John Kirkland  <jpk@bl.org>  (1.2-cvs-b5)
 	* Don't display [reset counter] in albums.php if the display
 	  counts feature is turned off for that particular album.
